@@ -22,6 +22,7 @@ Version 0.2.1 - ??
 - [new] Add nullPlaceholder property to WFTextArea and WFLabel.
 - [new] WFYAHOO_widget_Uploader now fires a 'WFYAHOO_widget_Uploader:allUploadsComplete' event when the upload is completed, allows fully on-page ajax uploading.
 - [BC-break] Changed the default error code for WFError to NULL from 0. I don't think anyone is relying on this.
+- [BC-break] Changed the signature of WFModuleInvocation::quickModule() to mirror that of WFModule constructor. I searched all of my own projects and had no actual uses of quickModule() that would be affected by this change, but I am noting it anyway for others.
 
 Version 0.2.0 - 1/21/2009
 - [new] Add preventAbandondedForm property to WFYAHOO_widget_Tab. Given the ID of a form element, this will prevent navigation to another tab with "dirty" data.
